Fixes white gap about header when navbar slides up - WIP

--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -1,9 +1,11 @@
 .header {
     box-sizing: border-box;
     /* margin-top: 1.4rem; */
-    margin-top: 0;
+    /* padding-top: 10rem; */
     margin-bottom: 0;
-    height: 15vh;
+    margin-top: 0;
+    /* WHAT SHOULD THE HEIGHT BE SET TO?*/
+    height: 28vh;
     min-height: 135px;
     width: 100%;
     font-family: 'Garamond', serif;
@@ -19,7 +21,7 @@
     letter-spacing: 1rem;
     padding-bottom: 1rem;
 }
-@media screen and (min-width: 320px){
+@media screen and (min-width: 360px){
     .header {
         font-size: 2.5rem;
     }
