--- a/styles/HeaderPractice.module.css
+++ b/styles/HeaderPractice.module.css
@@ -3,10 +3,11 @@
     flex-direction: column;
     position: relative;
     width: 100%; 
-    height: 70vh;
+    height: 80vh;
     margin: 0;
     align-items: center;
     background-color: #EBEAE7;
+    /* padding-top: 30rem; */
 }
 .lgContainer {
     min-height: 680px;
